# archypix

./: .env.back.common  .env.worker.common  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml  flake.nix
back/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
back/.sqlx/: query-0055040344869dd3e13d56f1679440726c464a3c6d19aef2e3e5beba7808ae71.json  query-00594cef13ee77f05a5443588016a5d15a134c3441774668a7322b635c01150f.json  query-00deead53a1c7dd7d4dc751590d158674c33a11055c19cc10be6c50632bcea7c.json  query-027da9747283d7f14f7275e11d379806d579831059ec05dd878ab4370f9beb35.json  query-02afadfb8a619b1a52aea85f4ad3ce10e17239c0115f8d4f4c2bf81e4fadc9d1.json  query-051d68ef5587ca7257ec4513859268d7bc053c962aa6657a4219b1ca0ca1da30.json  query-054ce3624833b746cefd1b304633c13e9fab95dab1e4621444739cacd1a68835.json  query-05df842fc790171779724cfbfe417b8b99f3164bdb39cf8c358869be10159c36.json  query-065190f96ccff8bb572cd9b0314d1fb062b24c08ad140532152fc4769020fb5b.json  query-06e7b3b566ae86aa3ea8121224298055a76b783c3e7ee7315bf2ad16f10830c4.json  query-080296486496ea434aefc221a9e7c5b0ac3be7b1b566612147cb6b5adef90623.json  query-08d2dfabf2de40099ee36dc7348b9b8d6cd78c716b9b66c34c7eecb18f47fedd.json  query-0a5437b6ff12ca4e07d27f71d3688159d6829f0197e0259b8e34a4a4579c418a.json  query-0a98b30183df1a767d783f784cdbf7a789af4056ad68b6c654429eef79f7a7dd.json  query-0b40987013f2a8cc72bc867bc6d9a99307971e12871f938ded0aceba91ca772c.json  query-0c4088012d69fde47ea20e08f2b0e8f8b92a97716910f0c1f44481163897803a.json  query-0cac0078a493f5deff5072d36226a08faaaf869f534e58b7c6b6ac0abc7d2b6b.json  query-0de78a0fe8d51f1e4c64f8fbbc1e8ea65203e4f8b77d92a7ae0abc2cf4572a55.json  query-0efc870c31b1861b07ce0e4963b69f3aced817a41941ec1cb02f1f159c6c163f.json  query-0efd4cefae0a2760fdaf3e20d5b892bcd21f030e53d3825bb80709936ec0a851.json  query-0f9a7f4efb47a1d5f95dbf115fd929f05683c2893fd8c73327c297b63c4aa3a8.json  query-103b20affe5695942ccda9d333f7a0ee9ada13ade3def4dd606f6710d8e7c406.json  query-112d1ca5119c2042e30e1b61241659e683a022a5b83c36693bc6a0f1214074e4.json  query-11310d55b4870fe7a31f2b9468df6e2dd0ed0bd11779cedd22fbf15d5ac1a85b.json  query-12b194c2da1ba60fec73bcaa2c44c11157a4adf680ed5332316909ccac4bf8bd.json  query-134a7516d9c91b3c6db8938e4fa0be288a90788da927274a6d41b6727fee9cc5.json  query-139cf8c70e00e442d74653710f52916e138168fbc3f8765ca5c5a16453739c0b.json  query-144e1b0ee4ca1eaefb43cfa8061e6b17461192083e4edd6a9d568c3b0c647536.json  query-14e29c2fa4f468a0fc77446ca200d4d216d63c3f64fc8f870a15f818b1165544.json  query-15255dac7e7cb020a973b8a8c0c4a9fddabffdc6bead486e3bb9989a5fa31fe2.json  query-1641a23ce25a62a72e49df8f2ee1f4dab432dfb940e889ea8b1a6797d5ef69d1.json  query-16c531b925bbc02f67f098a6956bb9e7f9f1823d165157cad230c16000c57a68.json  query-18ab16b71840d2e0374da9c82848a5f7c6d75a7e2629e92ff165503e484deef4.json  query-1954967ea17f253b376c407a2e112b3627081b0de6d87f0635dd477cc6d744d5.json  query-1b0650fb966d79cb175b9e84076a39da65166e4f35d430be0ce5709cbfdab2ce.json  query-1bb97627a35a5795244a02860564fdfaac3b8d8253ea65c7744b234ae24836fa.json  query-1c246d246662fc1de13a37db272152b8dc076cbbebf567347dd26e9b7073a503.json  query-1dae6416e1f48ddb2b340ae3d15307c9821da0cd430cabf126494e9f7e167711.json  query-1e22cc883b6e3649a5cd0addf3cbdd93368557e04b3e80dc2260b73d183c1240.json  query-2114d648c4cffcfd61ab555ca74951d18da0b0c7d67182a0b6c652ba1da7d014.json  (+184 more)
back/migrations/: 001_initial_schema.down.sql  001_initial_schema.sql  001_initial_schema.up.sql  README.md
back/src/: api.rs  clients.rs  database.rs  domain.rs  infra.rs  infrastructure.rs  lib.rs  main.rs  repository.rs  services.rs  state.rs
back/src/api/: admin.rs  federation.rs  middleware.rs  resolver.rs  user.rs  user_handlers.rs  webfinger.rs  worker.rs
back/src/clients/: federation.rs  resolver.rs
back/src/database/: auth.rs  models.rs  picture.rs  shares.rs  tag.rs  user.rs
back/src/domain/: auth.rs  federation.rs  job.rs  picture.rs  pipeline.rs  share.rs  tag.rs  tagging.rs  user.rs  user_settings.rs
back/src/infra/: config.rs  crypto.rs  db.rs  error.rs  job_watchdog.rs  pipeline.rs  redis.rs  s3.rs  scheduler.rs  tasks.rs
back/src/infrastructure/: config.rs  error.rs  redis.rs  state.rs  storage.rs  storage_service.rs
back/src/repository/: admin.rs  auth.rs  job.rs  picture.rs  picture_version.rs  pipeline.rs  share.rs  share_announcement.rs  tag.rs  tagging.rs  user.rs  user_settings.rs
back/src/services/: auth.rs  federation.rs  jobs.rs  pictures.rs  resolver.rs  shares.rs  storage.rs  tagging.rs  tags.rs  user_settings.rs  users.rs
back/tests/: federation_contract.rs  federation_handlers.rs  pipeline.rs  services_auth.rs  services_jobs.rs  services_shares.rs  services_tags.rs  services_users.rs  sharing_features.rs  worker_contract.rs
back/tests/common/: federation.rs  mod.rs
back/tests/federation/: contract.rs  mod.rs  presign.rs  rejection.rs
common/: Cargo.toml
common/src/: job.rs  lib.rs  mime.rs  serde_utils.rs  transfer.rs
fed-test/: .env.example  Cargo.toml
fed-test/src/: main.rs
resolver/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_api.sh
resolver/src/: config.rs  database.rs  error.rs  handler.rs  main.rs
worker/: .env.example  Cargo.toml  Dockerfile  README.md
worker/src/: auth.rs  backend.rs  config.rs  error.rs  imaging.rs  jobs.rs  main.rs
worker/src/backend/: mod.rs  models.rs
worker/src/imaging/: exif.rs  hash.rs  mod.rs  resize.rs  thumbnailer.rs
(+65 files in other folders)
