[package]
name = "archypix-back"
version = "0.1.0"
edition = "2024"

[dependencies]
archypix-common = { path = "../common", features = ["sqlx"] }
tokio = { version = "1.42", features = ["full"] }
axum = "0.8.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "compression-full", "limit", "timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "json", "chrono"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.18"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
rand = { version = "0.10", features = ["std"] }
bb8-redis = "0.26.0"
aws-config = "1.5"
aws-sdk-s3 = "1.64"
md5 = "0.7"
base64 = "0.22"
http = "1"
reqwest = { version = "0.13", features = ["json", "query"] }
sha2 = "0.11"
hex = "0.4"
futures-util = "0.3.32"
async-trait = "0.1"

[[test]]
name = "federation"
path = "tests/federation/mod.rs"
