[package]
name = "archypix-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable SQLx derives on domain enums (JobType, JobStatus).
# Include this feature in back/, which needs compile-time SQL type checking.
# Do NOT include it in worker/, which has no database dependency.
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sqlx]
version = "0.9"
features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"]
optional = true
