[package]
name = "archypix-worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "archypix-worker"
path = "src/main.rs"

[dependencies]
archypix-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
magick_rust = "2"
rexiv2 = "0.10"
num-rational = "0.4"
blurhash = "0.2"
tempfile = "3"
bytes = "1"
futures-util = "0.3"
